Added gamemode customziation and 1.18 native